fixed count in pymongo cursor.

--- a/config.ini
+++ b/config.ini
@@ -16,7 +16,7 @@ NESTED_REASONING = true
 # Waiting seconds before returning to idle state
 WAIT_TIME = 1000
 # Telegram token
-TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TELEGRAM_TOKEN = 1916668318:AAHzAiZtstvs7El00AUCOJA3Oj45KSA7ELA
 # Operations logging
 LOG_ACTIVE = True
 # External file for feeding KBs
@@ -43,10 +43,10 @@ EXTRA_GEN_POS = VBN
 
 # POS Predicate labels encoding with WordNet synsets
 [DISAMBIGUATION]
-DIS_ACTIVE = false
+DIS_ACTIVE = true
 DIS_VERB = VBZ, VBP, VB, VBD
 DIS_NOUN = NN, NNS
-DIS_ADJ = JJ
+DIS_ADJ = JJ, JJS
 DIS_ADV = RB
 DIS_EXCEPTIONS = be
 # GLOSS: doc2vect similarity with gloss
@@ -63,7 +63,7 @@ GMC_POS = NN, NNS, VBZ, VBP, VB, VBD, JJ
 
 # Lower Knowledge Base
 [LKB]
-LKB_USAGE = true
+LKB_USAGE = false
 HOST = mongodb://localhost:27017/
 MIN_CONFIDENCE = 0.6
 EMPTY_HKB_AFTER_REASONING = no
@@ -71,7 +71,7 @@ EMPTY_HKB_AFTER_REASONING = no
 # Question Answering
 [QA]
 LOC_PREPS = in, at
-TIME_PREPS = in
+TIME_PREPS = in, on
 COP_VERB = is, was, were
 ROOT_TENSE_DEBT = did:VBD, does:VBZ
 SHOW_REL = true
