--- a/config.ini
+++ b/config.ini
@@ -16,11 +16,11 @@ NESTED_REASONING = true
 # Waiting seconds before returning to idle state
 WAIT_TIME = 1000
 # Telegram token
-TELEGRAM_TOKEN = 1916668318:AAHzAiZtstvs7El00AUCOJA3Oj45KSA7ELA
+TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 # Operations logging
 LOG_ACTIVE = True
 # External file for feeding KBs
-FILE_KB_NAME = west303.txt
+FILE_KB_NAME = west25.txt
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
@@ -58,12 +58,12 @@ DIS_METRIC_COMPARISON = COMBINED
 
 # Common meaning for same lemmas in a session-context (DISAMBIGUATION=ACTIVE)
 [GROUNDED_MEANING_CONTEXT]
-GMC_ACTIVE = false
+GMC_ACTIVE = true
 GMC_POS = NN, NNS, VBZ, VBP, VB, VBD, JJ
 
 # Lower Knowledge Base
 [LKB]
-LKB_USAGE = false
+LKB_USAGE = true
 HOST = mongodb://localhost:27017/
 MIN_CONFIDENCE = 0.6
 EMPTY_HKB_AFTER_REASONING = no
