+mongo db docker

--- a/config.ini
+++ b/config.ini
@@ -7,10 +7,14 @@ LANGUAGE = eng
 # Enable assignment rules creation
 ASSIGN_RULES_ADMITTED = true
 
-[REASONING]
-# Enable occur_check inside Unify - to be used carefully preferably with unique labels
-OCCUR_CHECK = true
-NESTED_REASONING = true
+# Lower Knowledge Base
+[LKB]
+LKB_USAGE = true
+HOST = mongodb://localhost:27017/
+USER = root
+PASSWORD = example
+MIN_CONFIDENCE = 0.6
+EMPTY_HKB_AFTER_REASONING = no
 
 [AGENT]
 # Waiting seconds before returning to idle state
@@ -21,6 +25,11 @@ TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 LOG_ACTIVE = True
 # External file for feeding KBs
 FILE_KB_NAME = west25.txt
+
+[REASONING]
+# Enable occur_check inside Unify - to be used carefully preferably with unique labels
+OCCUR_CHECK = true
+NESTED_REASONING = true
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
@@ -60,13 +69,6 @@ DIS_METRIC_COMPARISON = COMBINED
 [GROUNDED_MEANING_CONTEXT]
 GMC_ACTIVE = true
 GMC_POS = NN, NNS, VBZ, VBP, VB, VBD, JJ
-
-# Lower Knowledge Base
-[LKB]
-LKB_USAGE = true
-HOST = mongodb://localhost:27017/
-MIN_CONFIDENCE = 0.6
-EMPTY_HKB_AFTER_REASONING = no
 
 # Question Answering
 [QA]
