--- a/config.ini
+++ b/config.ini
@@ -24,7 +24,7 @@ TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 # Operations logging
 LOG_ACTIVE = True
 # External file for feeding KBs
-FILE_KB_NAME = west25.txt
+FILE_KB_NAME = kbs/west25.txt
 
 [REASONING]
 # Enable occur_check inside Unify - to be used carefully preferably with unique labels
