--- a/mongo.yaml
+++ b/mongo.yaml
@@ -20,7 +20,7 @@ services:
   
   # mongo-express
   mongo-express:    
-    image: mongo-express
+    image: mongo-express:0.54.0
     container_name: mongo-express
     depends_on:
       - db
