--- a/config.ini
+++ b/config.ini
@@ -5,11 +5,16 @@ VERBOSE = false
 # WordNet language
 LANGUAGE = eng
 # Enable assignment rules creation
-ASSIGN_RULES_ADMITTED = true
+ASSIGN_RULES_ADMITTED = false
+# Deadjectival nominalization activation
+DEAJECT_NOM = false
+# Deverbal nominalization activation
+DEVERB_NOM = false
+
 
 # Lower Knowledge Base
 [LKB]
-LKB_USAGE = true
+LKB_USAGE = false
 HOST = mongodb://localhost:27017/
 USER = root
 PASSWORD = example
@@ -20,7 +25,7 @@ EMPTY_HKB_AFTER_REASONING = no
 # Waiting seconds before returning to idle state
 WAIT_TIME = 1000
 # Telegram token
-TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TELEGRAM_TOKEN = 1916668318:AAHzAiZtstvs7El00AUCOJA3Oj45KSA7ELA
 # Operations logging
 LOG_ACTIVE = True
 # External file for feeding KBs
@@ -29,7 +34,7 @@ FILE_KB_NAME = kbs/west25.txt
 [REASONING]
 # Enable occur_check inside Unify - to be used carefully preferably with unique labels
 OCCUR_CHECK = true
-NESTED_REASONING = true
+NESTED_REASONING = false
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
@@ -43,16 +48,16 @@ OBJ_JJ_TO_NOUN = true
 
 # Selective inclusion/exclusion of mods categories on generalizations assertion
 [GEN]
-GEN_PREP = true
-GEN_ADJ = true
-GEN_ADV = true
-GEN_EXTRA = true
+GEN_PREP = false
+GEN_ADJ = false
+GEN_ADV = false
+GEN_EXTRA = false
 # list separated by commas
 EXTRA_GEN_POS = VBN
 
 # POS Predicate labels encoding with WordNet synsets
 [DISAMBIGUATION]
-DIS_ACTIVE = true
+DIS_ACTIVE = false
 DIS_VERB = VBZ, VBP, VB, VBD
 DIS_NOUN = NN, NNS
 DIS_ADJ = JJ, JJS
@@ -77,3 +82,5 @@ TIME_PREPS = in, on
 COP_VERB = is, was, were
 ROOT_TENSE_DEBT = did:VBD, does:VBZ
 SHOW_REL = true
+
+
