--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ EMPTY_HKB_AFTER_REASONING = no
 # Waiting seconds before returning to idle state
 WAIT_TIME = 1000
 # Telegram token
-TELEGRAM_TOKEN = 1916668318:AAHzAiZtstvs7El00AUCOJA3Oj45KSA7ELA
+TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 # Operations logging
 LOG_ACTIVE = True
 # External file for feeding KBs
