--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,29 @@
 # Natural Language to First Order Logic
 [NL_TO_FOL]
 # enable verbose conversion
-VERBOSE = false
+#VERBOSE = false
+VERBOSE = true
+
 # WordNet language
 LANGUAGE = eng
+
 # Enable assignment rules creation
-ASSIGN_RULES_ADMITTED = false
+#ASSIGN_RULES_ADMITTED = false
+ASSIGN_RULES_ADMITTED = true
+
 # Deadjectival nominalization activation
 DEAJECT_NOM = false
+
 # Deverbal nominalization activation
 DEVERB_NOM = false
 
 
 # Lower Knowledge Base
 [LKB]
-LKB_USAGE = false
+
+#LKB_USAGE = false
+LKB_USAGE = true
+
 HOST = mongodb://localhost:27017/
 USER = root
 PASSWORD = example
@@ -25,7 +34,10 @@ EMPTY_HKB_AFTER_REASONING = no
 # Waiting seconds before returning to idle state
 WAIT_TIME = 1000
 # Telegram token
-TELEGRAM_TOKEN = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# TELEGRAM_TOKEN = 000000000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# Use an environment variable instead!
+
+
 # Operations logging
 LOG_ACTIVE = True
 # External file for feeding KBs
@@ -34,7 +46,8 @@ FILE_KB_NAME = kbs/west25.txt
 [REASONING]
 # Enable occur_check inside Unify - to be used carefully preferably with unique labels
 OCCUR_CHECK = true
-NESTED_REASONING = false
+# NESTED_REASONING = false
+NESTED_REASONING = true
 
 # Selective inclusion/exclusion of Part-of-Speech
 [POS]
@@ -48,9 +61,14 @@ OBJ_JJ_TO_NOUN = true
 
 # Selective inclusion/exclusion of mods categories on generalizations assertion
 [GEN]
-GEN_PREP = false
-GEN_ADJ = false
-GEN_ADV = false
+#GEN_PREP = false
+#GEN_ADJ = false
+#GEN_ADV = false
+
+GEN_PREP = true
+GEN_ADJ = true
+GEN_ADV = true
+
 GEN_EXTRA = false
 # list separated by commas
 EXTRA_GEN_POS = VBN
